grammar
program: stmt* EOF

stmt: (control | signal | stream) ("\n" | ";")

expr: (binary | unary | group | literal | call) ("\n" | ";")

unary: ("!" | "-") expr

binary: expr operator expr

operator: "+" | "-" | "*" | "/" | "!=" | "==" | "~=" | "<=" | ">="

control: "when" | "for" | "while"
